@@ -1,9 +1,4 @@
 DIST ecj-4.3.jar 1377431 RMD160 48fa985f763838bed750aa64a2fa997734438099 SHA1 da254944309a8387aa39323fe7bb7216a4518311 SHA256 9de193ea393ed50d868b730bad6916f7a8ef4ba80216f8606d3e1a0dd886e74b
-DIST gcc-4.3.4-patches-1.1.tar.bz2 75500 RMD160 5b02ac06f307eeec81644561cc1ec21abf32f207 SHA1 9544b0a3173a564d3a53b64c0c44d1017db694e7 SHA256 5fc2b803bcc0dfedff17dc7af1abd9d7ff4e61ad69b1a25991a920205c7f219e
-DIST gcc-4.3.4-piepatches-v10.1.5.tar.bz2 6026 RMD160 ce9b48cbd6febbec30bff3d783213dcc22532cba SHA1 0d47299c12ce7d261789a6fc18b900bed9772258 SHA256 30100a00d2d202fab78d250ec4c3844239294cd53ea347faa81b55f795712f51
-DIST gcc-4.3.4-specs-0.9.5.tar.bz2 1690 RMD160 2198d4c1e2ca53351e4132c819359fe2fc646fdf SHA1 1ad2be41f63888660d16e03ff5d420e01a922d9c SHA256 6b4a391fc775e735135d02c869cc64942a0f87a3275937e18dd33675172021c7
-DIST gcc-4.3.4-uclibc-patches-1.0.tar.bz2 2298 RMD160 111f83201a780a0e8af442b90edddac0465ecccb SHA1 5bbeeeec53d1a3a75a856c30dd0107606a468a03 SHA256 dc475684868cbd38abeb9759bcab1cc6f2de81ff0743a80aef2753f5b1599d00
-DIST gcc-4.3.4.tar.bz2 59368714 RMD160 f23c73a07e15faecaa1bac045f36f4d16be1ddb5 SHA1 cf5248733f26aafa361b3583e74783181eeb88b9 SHA256 e572453bdb74cc4ceebfab9ffb411d9678343dff5bf86e9338d42fdd0818aa65
 DIST gcc-4.4.3-patches-1.2.tar.bz2 12802 RMD160 4fed8dfde025fb397c29d11359c6583c40c8e217 SHA1 226ae5c9e177ac18b2a0f76c84233b33707f619b SHA256 d59016edf9c0d1f7158928ac5c29196af96ed34de17f9b0cefb5087faed3d6db
 DIST gcc-4.4.3-piepatches-v0.4.1.tar.bz2 17988 RMD160 73ac8448b8aab9a9d59919b7ea76f46ba89ed7dd SHA1 afda11bf77d10a8ed83d6cff1e21a5762d4da122 SHA256 9611c2b65a5f6ce447d17283eff398d69e262cbcd40363a951f7bdf9a80edfed
 DIST gcc-4.4.3-specs-0.1.8.tar.bz2 1993 RMD160 bfc7a4309c6866b1e162cae03083ad7f732b7204 SHA1 4abe17a1b8fbe7256ec56fef01316a210ebf468a SHA256 7da905dc02c422a21107489b7b8c9ea1c82a266d1ac397da7a6d9f9e657db80e
@@ -19,9 +14,8 @@ DIST gcc-4.5.0-piepatches-v0.4.1.tar.bz2 15650 RMD160 196902a7138fbdc57a5e01882f
 DIST gcc-4.5.0-specs-0.1.8.tar.bz2 1957 RMD160 3c10f96ea3b90c2ab402a8f97aa8f4bb3ddf225f SHA1 cbf7c47785544db09dc00c738251c6fb78999792 SHA256 59f32254d118c184075f7f4eec719819607c3ad656e40b3479a5944777997be7
 DIST gcc-4.5.0-uclibc-patches-1.0.tar.bz2 2281 RMD160 860f77f9ae11f24a760cf763b9965ef64dd9d416 SHA1 ec67f80f0b5da78edbe6a85eb3b93090a628f535 SHA256 5faa9c4eac7c67afeae081a936dd6406f11a930c3c240a83d76ffdee74b04e6f
 DIST gcc-4.5.0.tar.bz2 65941778 RMD160 84c9b2bf117ce3e29cba8fa2cd62fa4f8f7f5749 SHA1 4beb8366ce1883f37255aa57f0258e7d3cd13a9b SHA256 8293e9efa68a8ec0fdd0dae9c9bd128a8e742566acd9c8fbcfe79d98ed3756c8
-EBUILD gcc-4.3.4-r4.ebuild 2401 RMD160 7de41b6507be443555e0e7c4d2bdafcf09ae4406 SHA1 f4d997b52cf97ea9bf101aa085285e77fe4d9136 SHA256 5cf23424044d39ecdf0bb2cf22525261be6617de289a5ede98a631ae504800b9
 EBUILD gcc-4.4.3-r4.ebuild 2464 RMD160 3611499ae2abb61edcc279bfd3033f35241b9866 SHA1 12f8bbbddc9949813c44a246264081d8e30c09b9 SHA256 7441ff87b6293dc1d252da6c1ad2f0de680199d94f4a9b9df21672b1eef5f00e
 EBUILD gcc-4.4.4.ebuild 2456 RMD160 c60b82ba576c7cdfee22e4ae0c16a63d2c908797 SHA1 e1dbca43778f9c0d7ef93231f47776d79136c511 SHA256 b16acaa42f9975e6fbae751477e0ecf0882d04ee52cf7a760c393e2add9c6864
 EBUILD gcc-4.5.0-r1.ebuild 2217 RMD160 96da6f1a4997c68a20b2d5a9e9b0ba2e1bf64825 SHA1 ee6a1c03528d47d2ca3935dce5049e02490f36e2 SHA256 67b53d4555a4593a3afb369a8fa295101dfa34bb1021e97530bb23036659bb63
-MISC ChangeLog 2664 RMD160 628d51e789f2ad51b689b1e23d1df1833a21b81d SHA1 391e21f5bb54b918b5a426ad3ac20a3e9aa2fc27 SHA256 b08f78115458df99c69a38b7f64db8ff391e8b0ba0a82eebccc716ab6d3a7fe1
+MISC ChangeLog 2752 RMD160 37abd51e33dfa0e61fd0cab3dae2dea5cfe59229 SHA1 288db141ae8a058f9590250847751b3039372871 SHA256 2d4b10879ba72d5d8bb72dc0423af8815242e2fa09133bba57e7915e4f30ad44
 MISC metadata.xml 1678 RMD160 7d8df302684ecf0e23caf763d3fcee267d40866b SHA1 f9a035b4a7bf8a6fbf9e1627f777b86f30813517 SHA256 3e67d554a8e3135943623ab276d6871582fda0cdb556d31531b369d8c0b277d7
