@@ -2,6 +2,9 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  15 May 2010; <zorry@gentoo.org> -gcc-4.3.4-r4.ebuild:
+  GCC 4.4.3 going stable soon.
+
 *gcc-4.4.4 (04 May 2010)
 
   04 May 2010; <zorry@gentoo.org> +gcc-4.4.4.ebuild:
